fix: layout issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import "./button.css";
+/* @import "./button.css";
 @import "./tags.css";
 @import "./modal.css";
 @import "./header.css";
@@ -14,7 +14,7 @@
 @import "./testimonial.css";
 @import "./footer.css";
 @import "./team/team.css";
-@import "./docs.css";
+@import "./docs.css"; */
 
 @font-face {
   font-family: "sf-pro-regular";
@@ -32,6 +32,13 @@
   font-weight: 300;
   font-style: normal;
   font-display: fallback;
+}
+
+aside {
+  overflow-y: hidden;
+}
+aside:hover {
+  overflow-y: overlay;
 }
 
 @font-face {
@@ -84,9 +91,8 @@
 @layer base {
   html {
   }
-  body{
+  body {
     overscroll-behavior: none;
-
   }
 }
 
@@ -101,10 +107,9 @@
   filter: invert(34%) sepia(78%) saturate(5641%) hue-rotate(237deg)
     brightness(104%) contrast(101%);
 }
-.filter-white{
-  filter: invert(98%) sepia(11%) saturate(198%) hue-rotate(61deg) brightness(121%) contrast(100%);
-
-
+.filter-white {
+  filter: invert(98%) sepia(11%) saturate(198%) hue-rotate(61deg)
+    brightness(121%) contrast(100%);
 }
 
 .twitter > div {
@@ -114,7 +119,7 @@
 .fixed-layout {
   min-height: calc(100vh - 168px);
 }
-.sm-container{
+.sm-container {
   @apply max-w-[1120px];
 }
 
@@ -126,107 +131,120 @@
   @apply dark:text-primary;
 } */
 
-
-
 .image-container {
-
   width: 100%;
 }
 
 .image-container > div {
-    position: unset !important;
-  }
+  position: unset !important;
+}
 
-  .image-container .image {
-    object-fit: contain;
-    width: 100% !important;
-    position: relative !important;
-    height: unset !important;
-  }
+.image-container .image {
+  object-fit: contain;
+  width: 100% !important;
+  position: relative !important;
+  height: unset !important;
+}
 
+.gradient-dark {
+  background: linear-gradient(
+    89.93deg,
+    rgba(249, 249, 249, 0) 0.06%,
+    #f9f9f9 47.82%,
+    rgba(249, 249, 249, 0) 99.95%
+  );
+}
+.horizental-line:after {
+  content: "";
+  @apply bg-gray dark:bg-black-200 w-[4px] absolute top-0 bottom-0 left-0;
+}
+.dot:after {
+  content: "";
+  @apply absolute w-[18px] h-[18px] bg-gray-100 dark:bg-gray-600 -left-[55px] lg:-left-[103px] top-2 rounded-sm  z-10;
+}
+.dark-gradient {
+  background: linear-gradient(
+    89.93deg,
+    #232323 0.06%,
+    #323131 47.82%,
+    #232323 99.95%
+  );
+}
 
-  .gradient-dark{
-    background: linear-gradient(89.93deg, rgba(249, 249, 249, 0) 0.06%, #F9F9F9 47.82%, rgba(249, 249, 249, 0) 99.95%);
-  }
-  .horizental-line:after{
-    content:'';
-    @apply bg-gray dark:bg-black-200 w-[4px] absolute top-0 bottom-0 left-0 ;
-  }
-  .dot:after{
-    content:'';
-    @apply absolute w-[18px] h-[18px] bg-gray-100 dark:bg-gray-600 -left-[55px] lg:-left-[103px] top-2 rounded-sm  z-10;
+body #c-bns button:first-child,
+body #s-bns button:first-child,
+body .cc_div .b-tg .c-tg {
+  @apply bg-primary hover:bg-primary;
+}
+body #c-bns button + button,
+body #s-c-bn,
+body #s-cnt button + button,
+body #s-bl .c-bl.b-ex,
+body .b-tl.exp {
+  @apply bg-gray hover:bg-gray;
+}
+#cc_div #cm {
+  @apply w-full max-w-full left-0 right-0 bottom-0 dark:bg-black dark:text-gray py-2;
+}
+body #cc_div #cm h3 {
+  @apply dark:text-gray;
+}
+#cm #c-inr {
+  @apply flex justify-between items-center max-[600px]:flex-col items-center;
+}
+#cm #c-inr #c-inr-i {
+  @apply flex-1;
+}
+body .cc_div #c-bns {
+  @apply m-0 max-[600px]:flex-row;
+}
+body .cc_div .c-bn {
+  @apply flex-none px-3 py-2;
+}
+#cc_div #cm .c-bn,
+.cc_div .c-bn {
+  @apply max-[600px]:w-auto max-[600px]:m-1 max-[600px]:mt-4;
+}
+.prose h1,
+.prose h2,
+.prose p,
+.prose ul,
+.prose li,
+.prose div {
+  @apply text-black-200 dark:text-gray;
+}
+.prose h1,
+.prose h2,
+.prose h3,
+.prose h4,
+.prose h5,
+.prose h6,
+.prose strong,
+.prose b {
+  @apply font-semibold;
+}
+.prose p {
+  @apply leading-7;
+}
+body #cc_div #cm {
+  @apply rounded-none;
+}
+.prose a {
+  @apply text-primary dark:text-primary-100;
+}
 
-  }
-  .dark-gradient{
-    background:linear-gradient(89.93deg, #232323 0.06%, #323131 47.82%, #232323 99.95%);
-  }
-
-
-  body #c-bns button:first-child, body #s-bns button:first-child, body .cc_div .b-tg .c-tg{
-    @apply bg-primary hover:bg-primary;
-
-  }
-  body #c-bns button+button, body #s-c-bn, body #s-cnt button+button, body #s-bl .c-bl.b-ex, body .b-tl.exp{
-    @apply bg-gray hover:bg-gray;
-  }
-  #cc_div #cm{
-    @apply w-full max-w-full left-0 right-0 bottom-0 dark:bg-black dark:text-gray py-2;
-  }
-  body #cc_div #cm h3{
-    @apply dark:text-gray;
-  }
-  #cm #c-inr{
-    @apply flex justify-between items-center max-[600px]:flex-col items-center;
-  }
-  #cm #c-inr #c-inr-i {
-    @apply flex-1;
-  }
-  body .cc_div #c-bns{
-    @apply m-0 max-[600px]:flex-row;
-  }
-  body .cc_div .c-bn{
-    @apply flex-none px-3 py-2;
-  }
-  #cc_div #cm .c-bn, .cc_div .c-bn {
-    @apply max-[600px]:w-auto max-[600px]:m-1 max-[600px]:mt-4;
-  }
-  .prose h1, .prose h2, .prose p, .prose ul, .prose li, .prose div {
-    @apply text-black-200 dark:text-gray;
-  }
-  .prose h1, .prose h2, .prose h3, .prose h4, .prose h5, .prose h6, .prose strong, .prose b {
-    @apply font-semibold;
-  }
-  .prose p {
-    @apply leading-7;
-  }
-  body #cc_div #cm{
-    @apply rounded-none;
-  }
-  .prose a {
-    @apply text-primary dark:text-primary-100;
-  }
-
-
-  .primary-bg{
-    background: linear-gradient(180deg, #853ecc 50%, transparent 50%);
-   
-
-
-
-  }
-  @media screen and (max-width : 1024px) {
-    .primary-bg{
+.primary-bg {
+  background: linear-gradient(180deg, #853ecc 50%, transparent 50%);
+}
+@media screen and (max-width: 1024px) {
+  .primary-bg {
     background: linear-gradient(180deg, #853ecc 100%, transparent 0%);
-    }
-    .dark .primary-bg-dark{
-      background: linear-gradient(180deg, #6726A7 100%, transparent 0%);
-  
-    }
-
   }
-
-
-  .dark .primary-bg-dark{
-    background: linear-gradient(180deg, #6726A7 50%, transparent 50%);
-
+  .dark .primary-bg-dark {
+    background: linear-gradient(180deg, #6726a7 100%, transparent 0%);
   }
+}
+
+.dark .primary-bg-dark {
+  background: linear-gradient(180deg, #6726a7 50%, transparent 50%);
+}
